PFE/nlParser.java
// Generated from nl.g4 by ANTLR 4.9.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class nlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		DIGIT=60, MMM=61, WORD=62, EROOR_RECOGNITION=63, WS=64;
	public static final int
		RULE_why_question = 0, RULE_question_pronoun = 1, RULE_fil_ter = 2, RULE_temporel_dimension = 3, 
		RULE_filter_operator = 4, RULE_dimension_marker = 5, RULE_ng = 6, RULE_ngf = 7, 
		RULE_ng1 = 8, RULE_ng_f1 = 9, RULE_determinant = 10, RULE_conj_coordination = 11, 
		RULE_trend_indicator = 12, RULE_nominal_term = 13, RULE_noun = 14, RULE_mesure_indicator = 15, 
		RULE_temporel_lexicon = 16, RULE_adjective = 17, RULE_past_participale = 18, 
		RULE_preposition = 19, RULE_mg = 20, RULE_verb = 21, RULE_date = 22, RULE_interogation = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"why_question", "question_pronoun", "fil_ter", "temporel_dimension", 
			"filter_operator", "dimension_marker", "ng", "ngf", "ng1", "ng_f1", "determinant", 
			"conj_coordination", "trend_indicator", "nominal_term", "noun", "mesure_indicator", 
			"temporel_lexicon", "adjective", "past_participale", "preposition", "mg", 
			"verb", "date", "interogation"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'why'", "'equal'", "'more than'", "'this'", "'less than'", "'with'", 
			"'between'", "'for'", "'during'", "'since'", "'while'", "'when'", "'according to'", 
			"','", "'DT'", "'and'", "'decrease'", "'increase'", "'low'", "'high'", 
			"'stagnation'", "'stable'", "'evolve'", "'didn't evolve'", "'decreased'", 
			"'increased'", "'NN'", "'NNS'", "'NNP'", "'NNPS'", "'quantity'", "'amount'", 
			"'total'", "'number'", "'volume'", "'ratio'", "'percentage'", "'degree'", 
			"'time'", "'year'", "'month'", "'day'", "'season'", "'hour'", "'minute'", 
			"'seconde'", "'JJ'", "'JJR'", "'JJS'", "'VBN'", "'IN'", "'in'", "'VB'", 
			"'VBG'", "'VBD'", "'VBP'", "'VBZ'", "'/'", "'?'", "'CD'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"DIGIT", "MMM", "WORD", "EROOR_RECOGNITION", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "nl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public nlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Why_questionContext extends ParserRuleContext {
		public Why_questionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_why_question; }
	 
		public Why_questionContext() { }
		public void copyFrom(Why_questionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ErrorContext extends Why_questionContext {
		public TerminalNode EROOR_RECOGNITION() { return getToken(nlParser.EROOR_RECOGNITION, 0); }
		public ErrorContext(Why_questionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).enterError(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).exitError(this);
		}
	}
	public static class WhyExprContext extends Why_questionContext {
		public Question_pronounContext question_pronoun() {
			return getRuleContext(Question_pronounContext.class,0);
		}
		public NgContext ng() {
			return getRuleContext(NgContext.class,0);
		}
		public Trend_indicatorContext trend_indicator() {
			return getRuleContext(Trend_indicatorContext.class,0);
		}
		public TerminalNode EOF() { return getToken(nlParser.EOF, 0); }
		public List<MgContext> mg() {
			return getRuleContexts(MgContext.class);
		}
		public MgContext mg(int i) {
			return getRuleContext(MgContext.class,i);
		}
		public List<Fil_terContext> fil_ter() {
			return getRuleContexts(Fil_terContext.class);
		}
		public Fil_terContext fil_ter(int i) {
			return getRuleContext(Fil_terContext.class,i);
		}
		public InterogationContext interogation() {
			return getRuleContext(InterogationContext.class,0);
		}
		public WhyExprContext(Why_questionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).enterWhyExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).exitWhyExpr(this);
		}
	}

	public final Why_questionContext why_question() throws RecognitionException {
		Why_questionContext _localctx = new Why_questionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_why_question);
		int _la;
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				_localctx = new WhyExprContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				question_pronoun();
				setState(49);
				ng();
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__52) | (1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << T__56) | (1L << WORD))) != 0)) {
					{
					{
					setState(50);
					mg();
					}
					}
					setState(55);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(56);
				trend_indicator();
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__52) | (1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << T__56) | (1L << WORD))) != 0)) {
					{
					{
					setState(57);
					mg();
					}
					}
					setState(62);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(64); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(63);
					fil_ter();
					}
					}
					setState(66); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__50) | (1L << T__51))) != 0) );
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__58) {
					{
					setState(68);
					interogation();
					}
				}

				setState(71);
				match(EOF);
				}
				break;
			case EROOR_RECOGNITION:
				_localctx = new ErrorContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				match(EROOR_RECOGNITION);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Question_pronounContext extends ParserRuleContext {
		public Question_pronounContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question_pronoun; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).enterQuestion_pronoun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).exitQuestion_pronoun(this);
		}
	}

	public final Question_pronounContext question_pronoun() throws RecognitionException {
		Question_pronounContext _localctx = new Question_pronounContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_question_pronoun);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fil_terContext extends ParserRuleContext {
		public Dimension_markerContext dimension_marker() {
			return getRuleContext(Dimension_markerContext.class,0);
		}
		public NgfContext ngf() {
			return getRuleContext(NgfContext.class,0);
		}
		public Temporel_dimensionContext temporel_dimension() {
			return getRuleContext(Temporel_dimensionContext.class,0);
		}
		public Filter_operatorContext filter_operator() {
			return getRuleContext(Filter_operatorContext.class,0);
		}
		public Fil_terContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fil_ter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).enterFil_ter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).exitFil_ter(this);
		}
	}

	public final Fil_terContext fil_ter() throws RecognitionException {
		Fil_terContext _localctx = new Fil_terContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fil_ter);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				dimension_marker();
				setState(79);
				ngf();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				dimension_marker();
				setState(82);
				temporel_dimension();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				filter_operator();
				setState(85);
				ngf();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(87);
				filter_operator();
				setState(88);
				temporel_dimension();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Temporel_dimensionContext extends ParserRuleContext {
		public NgContext ng() {
			return getRuleContext(NgContext.class,0);
		}
		public DateContext date() {
			return getRuleContext(DateContext.class,0);
		}
		public Temporel_dimensionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_temporel_dimension; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).enterTemporel_dimension(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).exitTemporel_dimension(this);
		}
	}

	public final Temporel_dimensionContext temporel_dimension() throws RecognitionException {
		Temporel_dimensionContext _localctx = new Temporel_dimensionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_temporel_dimension);
		try {
			setState(96);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__14:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
			case T__31:
			case T__32:
			case T__33:
			case T__34:
			case T__35:
			case T__36:
			case T__37:
			case T__38:
			case T__39:
			case T__40:
			case T__41:
			case T__42:
			case T__43:
			case T__44:
			case T__45:
			case T__46:
			case T__47:
			case T__48:
			case T__50:
			case T__51:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				ng();
				setState(93);
				date();
				}
				break;
			case DIGIT:
			case MMM:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				date();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Filter_operatorContext extends ParserRuleContext {
		public Filter_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filter_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).enterFilter_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).exitFilter_operator(this);
		}
	}

	public final Filter_operatorContext filter_operator() throws RecognitionException {
		Filter_operatorContext _localctx = new Filter_operatorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_filter_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dimension_markerContext extends ParserRuleContext {
		public PrepositionContext preposition() {
			return getRuleContext(PrepositionContext.class,0);
		}
		public Dimension_markerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dimension_marker; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).enterDimension_marker(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).exitDimension_marker(this);
		}
	}

	public final Dimension_markerContext dimension_marker() throws RecognitionException {
		Dimension_markerContext _localctx = new Dimension_markerContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dimension_marker);
		try {
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				match(T__7);
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				match(T__8);
				}
				break;
			case T__50:
			case T__51:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				preposition();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 4);
				{
				setState(103);
				match(T__9);
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 5);
				{
				setState(104);
				match(T__10);
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 6);
				{
				setState(105);
				match(T__11);
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 7);
				{
				setState(106);
				match(T__12);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NgContext extends ParserRuleContext {
		public List<Ng1Context> ng1() {
			return getRuleContexts(Ng1Context.class);
		}
		public Ng1Context ng1(int i) {
			return getRuleContext(Ng1Context.class,i);
		}
		public List<DeterminantContext> determinant() {
			return getRuleContexts(DeterminantContext.class);
		}
		public DeterminantContext determinant(int i) {
			return getRuleContext(DeterminantContext.class,i);
		}
		public Conj_coordinationContext conj_coordination() {
			return getRuleContext(Conj_coordinationContext.class,0);
		}
		public NgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ng; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).enterNg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).exitNg(this);
		}
	}

	public final NgContext ng() throws RecognitionException {
		NgContext _localctx = new NgContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ng);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__14) {
				{
				setState(109);
				determinant();
				}
			}

			setState(112);
			ng1();
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(118); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(113);
					match(T__13);
					setState(115);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__14) {
						{
						setState(114);
						determinant();
						}
					}

					setState(117);
					ng1();
					}
					}
					setState(120); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__13 );
				}
				break;
			case 2:
				{
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__13) {
					{
					{
					setState(122);
					match(T__13);
					setState(124);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__14) {
						{
						setState(123);
						determinant();
						}
					}

					setState(126);
					ng1();
					}
					}
					setState(131);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				{
				setState(132);
				conj_coordination();
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__14) {
					{
					setState(133);
					determinant();
					}
				}

				setState(136);
				ng1();
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NgfContext extends ParserRuleContext {
		public List<Ng_f1Context> ng_f1() {
			return getRuleContexts(Ng_f1Context.class);
		}
		public Ng_f1Context ng_f1(int i) {
			return getRuleContext(Ng_f1Context.class,i);
		}
		public List<DeterminantContext> determinant() {
			return getRuleContexts(DeterminantContext.class);
		}
		public DeterminantContext determinant(int i) {
			return getRuleContext(DeterminantContext.class,i);
		}
		public Conj_coordinationContext conj_coordination() {
			return getRuleContext(Conj_coordinationContext.class,0);
		}
		public NgfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ngf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).enterNgf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).exitNgf(this);
		}
	}

	public final NgfContext ngf() throws RecognitionException {
		NgfContext _localctx = new NgfContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ngf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__14) {
				{
				setState(140);
				determinant();
				}
			}

			setState(143);
			ng_f1();
			setState(169);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				{
				setState(149); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(144);
					match(T__13);
					setState(146);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__14) {
						{
						setState(145);
						determinant();
						}
					}

					setState(148);
					ng_f1();
					}
					}
					setState(151); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__13 );
				}
				break;
			case 2:
				{
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__13) {
					{
					{
					setState(153);
					match(T__13);
					setState(155);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__14) {
						{
						setState(154);
						determinant();
						}
					}

					setState(157);
					ng_f1();
					}
					}
					setState(162);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				{
				setState(163);
				conj_coordination();
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__14) {
					{
					setState(164);
					determinant();
					}
				}

				setState(167);
				ng_f1();
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ng1Context extends ParserRuleContext {
		public List<Nominal_termContext> nominal_term() {
			return getRuleContexts(Nominal_termContext.class);
		}
		public Nominal_termContext nominal_term(int i) {
			return getRuleContext(Nominal_termContext.class,i);
		}
		public List<AdjectiveContext> adjective() {
			return getRuleContexts(AdjectiveContext.class);
		}
		public AdjectiveContext adjective(int i) {
			return getRuleContext(AdjectiveContext.class,i);
		}
		public List<PrepositionContext> preposition() {
			return getRuleContexts(PrepositionContext.class);
		}
		public PrepositionContext preposition(int i) {
			return getRuleContext(PrepositionContext.class,i);
		}
		public List<Past_participaleContext> past_participale() {
			return getRuleContexts(Past_participaleContext.class);
		}
		public Past_participaleContext past_participale(int i) {
			return getRuleContext(Past_participaleContext.class,i);
		}
		public Ng1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ng1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).enterNg1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).exitNg1(this);
		}
	}

	public final Ng1Context ng1() throws RecognitionException {
		Ng1Context _localctx = new Ng1Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_ng1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
			case T__31:
			case T__32:
			case T__33:
			case T__34:
			case T__35:
			case T__36:
			case T__37:
			case T__38:
			case T__39:
			case T__40:
			case T__41:
			case T__42:
			case T__43:
			case T__44:
			case T__45:
				{
				setState(171);
				nominal_term();
				}
				break;
			case T__46:
			case T__47:
			case T__48:
				{
				setState(172);
				adjective();
				}
				break;
			case T__50:
			case T__51:
				{
				setState(173);
				preposition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51))) != 0)) {
				{
				setState(180);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__26:
				case T__27:
				case T__28:
				case T__29:
				case T__30:
				case T__31:
				case T__32:
				case T__33:
				case T__34:
				case T__35:
				case T__36:
				case T__37:
				case T__38:
				case T__39:
				case T__40:
				case T__41:
				case T__42:
				case T__43:
				case T__44:
				case T__45:
					{
					setState(176);
					nominal_term();
					}
					break;
				case T__46:
				case T__47:
				case T__48:
					{
					setState(177);
					adjective();
					}
					break;
				case T__49:
					{
					setState(178);
					past_participale();
					}
					break;
				case T__50:
				case T__51:
					{
					setState(179);
					preposition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ng_f1Context extends ParserRuleContext {
		public List<Nominal_termContext> nominal_term() {
			return getRuleContexts(Nominal_termContext.class);
		}
		public Nominal_termContext nominal_term(int i) {
			return getRuleContext(Nominal_termContext.class,i);
		}
		public List<AdjectiveContext> adjective() {
			return getRuleContexts(AdjectiveContext.class);
		}
		public AdjectiveContext adjective(int i) {
			return getRuleContext(AdjectiveContext.class,i);
		}
		public PrepositionContext preposition() {
			return getRuleContext(PrepositionContext.class,0);
		}
		public List<Past_participaleContext> past_participale() {
			return getRuleContexts(Past_participaleContext.class);
		}
		public Past_participaleContext past_participale(int i) {
			return getRuleContext(Past_participaleContext.class,i);
		}
		public Ng_f1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ng_f1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).enterNg_f1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nlListener ) ((nlListener)listener).exitNg_f1(this);
		}
	}

	public final Ng_f1Context ng_f1() throws RecognitionException {
		Ng_f1Context _localctx = new Ng_f1Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_ng_f1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
			case T__31:
			case T__32:
			case T__33:
			case T__34:
			case T__35:
			case T__36:
			case T__37:
			case T__38:
			case T__39:
			case T__40:
			case T__41:
			case T__42:
			case T__43:
			case T__44:
			case T__45:
				{
				setState(185);
				nominal_term();
				}
				break;
			case T__46:
			case T__47:
			case T__48:
				{
				setState(186);
				adjective();
				}
				break;
			case T__50:
			case T__51:
				{
				setState(187);
				preposition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(195);
			_errHandler.sync(this);
			_la = _input.LA(1);
